--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+
+@import "tailwindcss/components";
+@import "./components.css";
+
+@import "tailwindcss/utilities";
+
+body {
+  @apply bg-gray-200;
+}
