--- a/src/styles/components/buttons.css
+++ b/src/styles/components/buttons.css
@@ -13,3 +13,7 @@
 .btn-blue-border:disabled {
   @apply bg-blue-500 text-white opacity-50 cursor-not-allowed;
 }
+
+.btn-red-border {
+  @apply border border-red-500 text-red-700 hover:bg-red-500 hover:text-white hover:border-transparent;
+}
