--- a/src/styles/components/forms.css
+++ b/src/styles/components/forms.css
@@ -2,7 +2,9 @@
   @apply block appearance-none leading-tight focus:outline-none;
 }
 
-rounded w-full py-2 px-4
+.select-gray {
+  @apply bg-gray-200 border-2 border-gray-200 text-gray-700;
+}
 
 .input-base {
   @apply appearance-none focus:outline-none leading-tight;
